@@ -6,7 +6,7 @@ use 5.014;
 
 no if $] >= 5.018, warnings => 'experimental::smartmatch';
 
-our $VERSION = '1.69';
+our $VERSION = '1.70';
 
 use Carp qw(confess cluck);
 use DateTime;
@@ -964,7 +964,7 @@ Non-blocking variant (EXPERIMENTAL):
 
 =head1 VERSION
 
-version 1.69
+version 1.70
 
 =head1 DESCRIPTION
 
